Pacify the W3 validator by making correct SGML

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -174,9 +174,8 @@ e-mail addresses.  It isn't perfect, but short of destructively modifying
 addresses or omitting addresses altogether, there isn't a whole lot we
 can do right now.
 
-<a name="searchbox">
+<a name="searchbox"></a>
 <!--#include virtual="/searchbox.ihtml"-->
-</a>
 
 </body>
 </html>
