Remove "page last updated" which is now handled by the MetaHTML machinery. Add "database last updated" by means of MetaHTML.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -231,10 +231,17 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <input type=reset>
 </form>
 <hr noshade size=1>
-<!--#config timefmt="%Y-%m-%d" -->
-<i>This page was last modified on 
-<!--#echo var="LAST_MODIFIED" -->
-</i>
+
+<p><em>Database last updated</em>
+
+<!-- MetaHTML -->
+<alist-to-package
+ <get-file-properties /sourceware/htdig/gcc/db/db.docdb>
+ x
+>
+<add 1900 <get-var x::READ[2]>>-<get-var x::READ[0]>-<get-var x::READ[1]>
+
+
 <hr noshade size=1>
 <a href="http://www.htdig.org">
 <img src="/htdig/htdig.jpeg" alt="ht://Dig" border=0>ht://Dig</a>
