* index.html: Mention some news.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,16 @@ i
 
 <table>
 <tr><td valign="top">
+<b>February 16, 2000</b>
+</td><td>
+We've done a lot since the previous announcement, but we haven't
+mentioned it here.  Oops!  Here are some of the things we've added:
+complete reflection support, Runtime.loadLibrary,
+Throwable.printStackTrace (this one is <emph>very</emph> cool),
+a Java implementation of java.math.BigInteger, and, of course, many
+bug fixes and more minor enhancements.
+</td></tr>
+<tr><td valign="top">
 <b>September 6, 1999</b>
 </td><td>
 <a href="gcj-announce.txt">One year later</a>... new web pages.
@@ -138,7 +148,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.10 1999/09/06 19:37:26 green Exp $
+$Id: index.html,v 1.17 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
