* index.html: Forgot JNI.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -76,7 +76,8 @@ We've done a lot since the previous announcement, but we haven't
 mentioned it here.  Oops!  Here are some of the things we've added:
 complete reflection support, Runtime.loadLibrary,
 Throwable.printStackTrace (this one is <emph>very</emph> cool),
-a Java implementation of java.math.BigInteger, and, of course, many
+a Java implementation of java.math.BigInteger, JNI (believed complete
+but still in testing), and, of course, many
 bug fixes and more minor enhancements.
 </td></tr>
 <tr><td valign="top">
@@ -148,7 +149,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.17 1999/09/07 00:34:01 green Exp $
+$Id: index.html,v 1.18 2000/02/16 17:38:05 tromey Exp $
 </small>
 </address>
 
