--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -15,7 +15,7 @@
 <table border=0><tr><td width="10"></td><td>
 <a href="index.html">Home</a><br>
 <a href="faq.html">FAQ</a><br>
-<a href="faq-portugese.html">The FAQ in Brazilian Portugese</a>
+<a href="faq-portugese.html">The FAQ in Brazilian Portugese</a><br>
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
@@ -150,7 +150,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.19 2000/02/16 17:43:03 tromey Exp $
+$Id: index.html,v 1.20 2000/02/17 00:42:04 tromey Exp $
 </small>
 </address>
 
