--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -145,6 +145,22 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1999-03">Mar 1999
 <option value="gcc/1999-02">Feb 1999
 <option value="gcc/1999-01">Jan 1999
+<option value="gcc/1998-12">Dec 1998
+<option value="gcc/1998-11">Nov 1998
+<option value="gcc/1998-10">Oct 1998
+<option value="gcc/1998-09">Sep 1998
+<option value="gcc/1998-08">Aug 1998
+<option value="gcc/1998-07">Jul 1998
+<option value="gcc/1998-06">Jun 1998
+<option value="gcc/1998-05">May 1998
+<option value="gcc/1998-04">Apr 1998
+<option value="gcc/1998-03">Mar 1998
+<option value="gcc/1998-02">Feb 1998
+<option value="gcc/1998-01">Jan 1998
+<option value="gcc/1997-12">Dec 1997
+<option value="gcc/1997-11">Nov 1997
+<option value="gcc/1997-10">Oct 1997
+<option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
 <option value="gcc-bugs/2000-02">Feb 2000
@@ -160,6 +176,23 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1999-04">Apr 1999
 <option value="gcc-bugs/1999-03">Mar 1999
 <option value="gcc-bugs/1999-02">Feb 1999
+<option value="gcc-bugs/1999-01">Jan 1999
+<option value="gcc-bugs/1998-12">Dec 1998
+<option value="gcc-bugs/1998-11">Nov 1998
+<option value="gcc-bugs/1998-10">Oct 1998
+<option value="gcc-bugs/1998-09">Sep 1998
+<option value="gcc-bugs/1998-08">Aug 1998
+<option value="gcc-bugs/1998-07">Jul 1998
+<option value="gcc-bugs/1998-06">Jun 1998
+<option value="gcc-bugs/1998-05">May 1998
+<option value="gcc-bugs/1998-04">Apr 1998
+<option value="gcc-bugs/1998-03">Mar 1998
+<option value="gcc-bugs/1998-02">Feb 1998
+<option value="gcc-bugs/1998-01">Jan 1998
+<option value="gcc-bugs/1997-12">Dec 1997
+<option value="gcc-bugs/1997-11">Nov 1997
+<option value="gcc-bugs/1997-10">Oct 1997
+<option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
 <option value="gcc-patches/2000-02">Feb 2000
@@ -175,6 +208,15 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1999-04">Apr 1999
 <option value="gcc-patches/1999-03">Mar 1999
 <option value="gcc-patches/1999-02">Feb 1999
+<option value="gcc-patches/1999-01">Jan 1999
+<option value="gcc-patches/1998-12">Dec 1998
+<option value="gcc-patches/1998-11">Nov 1998
+<option value="gcc-patches/1998-10">Oct 1998
+<option value="gcc-patches/1998-09">Sep 1998
+<option value="gcc-patches/1998-08">Aug 1998
+<option value="gcc-patches/1998-07">Jul 1998
+<option value="gcc-patches/1998-06">Jun 1998
+<option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
 <option value="gcc-help/2000-02">Feb 2000
@@ -182,6 +224,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-help/1999-12">Dec 1999
 <option value="gcc-help/1999-11">Nov 1999
 <option value="gcc-help/1999-10">Oct 1999
+<option value="gcc-help/1999-09">Sep 1999
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
@@ -199,6 +242,14 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1999-03">Mar 1999
 <option value="gcc-cvs/1999-02">Feb 1999
 <option value="gcc-cvs/1999-01">Jan 1999
+<option value="gcc-cvs/1998-12">Dec 1998
+<option value="gcc-cvs/1998-11">Nov 1998
+<option value="gcc-cvs/1998-10">Oct 1998
+<option value="gcc-cvs/1998-09">Sep 1998
+<option value="gcc-cvs/1998-08">Aug 1998
+<option value="gcc-cvs/1998-07">Jul 1998
+<option value="gcc-cvs/1998-06">Jun 1998
+<option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
 <option value="gcc-testresults/2000-02">Feb 2000
@@ -232,7 +283,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 </form>
 <hr noshade size=1>
 
-<p><em>Database last updated</em>
+<em>Database last updated</em>
 
 <!-- MetaHTML -->
 <alist-to-package
