--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -45,6 +45,7 @@
       <br>
       <h1>The GCJ FAQ</h1>
       <p>The latest version of this document is always available at <a href="faq.html">http://sourceware.cygnus.com/java/faq.html</a>.</p>
+      <p>This FAQ is also available in <a href="faq-portugese.html">Brazilian Portugese</a>.</p>
       <ol>
         <li><a href="#1_0">General Questions</a> 
           <ol>
@@ -714,7 +715,7 @@ collect2: ld returned 1 exit status
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.10 2000/01/16 02:08:50 tromey Exp $ </small></address>
+<small> $Id: faq.html,v 1.11 2000/02/09 01:03:58 apbianco Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
