--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -127,6 +127,8 @@ in mixed compiled/interpreted systems.
 
 Compiled Java applications are debugged using recent versions of the
 GNU debugger, <a href="http://sourceware.cygnus.com/gdb">GDB</a>.
+A <a href="gdb.html">short tutorial</a> on using GDB to debug
+GCJ-compiled applications is available.
 
 <p>
 
@@ -149,7 +151,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.21 2000/02/17 00:50:57 tromey Exp $
+$Id: index.html,v 1.22 2000/02/17 07:57:12 green Exp $
 </small>
 </address>
 
