* faq.html: Typos.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -592,9 +592,9 @@ collect2: ld returned 1 exit status
           <tt>CLASSPATH</tt> environment variable pointing at a third party's 
           java.lang and friends. Either unset <tt>CLASSPATH</tt>, or make sure 
           it does not refer to core libraries other than those found in libgcj.zip.</dd>
-	  <p> An other symtom covered by this fix is a running
+	  <p> An other symptom covered by this fix is a running
           "<tt>Hello World</tt>" type program, with a lot of non printable
-	  ASCII garbage before and/or after the output. YMMW.
+	  ASCII garbage before and/or after the output.
         <dd></dd>
       </dl>
       <p></p>
@@ -715,7 +715,7 @@ collect2: ld returned 1 exit status
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.11 2000/02/09 01:03:58 apbianco Exp $ </small></address>
+<small> $Id: faq.html,v 1.12 2000/02/17 07:57:12 green Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
