--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -70,6 +70,7 @@ Please keep this list in alphabetical order.
 <li>Steve Chamberlain for config fixes and the picoJava port.
 <li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
+<li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
 <li>The GCC project <a
 href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
 great compiler work.
@@ -143,7 +144,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.3 1999/12/03 02:59:36 green Exp $
+$Id: thanks.html,v 1.4 2000/02/12 03:49:42 green Exp $
 </small>
 </address>
 
