--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,6 +105,11 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>February 23, 2000</b></dt>
+<dd>
+Cygnus, a Red Hat company, contributed an M*Core port.
+</dd>
+
 <dt><b>January 4, 2000</b></dt>
 <dd>
 Steve Chamberlain has contributed a picoJava port.
