--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -79,6 +79,9 @@ Successful
 <p><b>i386-unknown-freebsdelf</b><br>
 Successful
 
+<p><b>i386-unknown-netbsd1.4.1</b><br>
+Successful
+
 <p><b>i386-unknown-openbsd2.5</b><br>
 Successful
 
