* index.html: Mention AG's class init optimization and Hans 	Boehm's IA-64 libffi port.
	* thanks.html: Mention Hans Boehm's IA-64 libffi port.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,19 @@ i
 
 <table>
 <tr><td valign="top">
+<b>February 25, 2000</b>
+</td><td>
+Anthony Green added an important optimization to gcj.  His
+optimization eliminates redundant class initializations in some cases.
+It should speed up code which uses static methods or fields.
+</td></tr>
+<tr><td valign="top">
+<b>February 25, 2000</b>
+</td><td>
+Hans Boehm has contributed an IA-64 libffi port.  This is an important
+step towards getting libgcj to run on the IA-64.
+</td></tr>
+<tr><td valign="top">
 <b>February 16, 2000</b>
 </td><td>
 We've done a lot since the previous announcement, but we haven't
@@ -151,7 +164,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.22 2000/02/17 07:57:12 green Exp $
+$Id: index.html,v 1.23 2000/02/18 00:50:11 tromey Exp $
 </small>
 </address>
 
