--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -61,7 +61,8 @@ Please keep this list in alphabetical order.
 <p>
 <ul>
 <li>Geoff Berry for his object serialization work and various patches.
-<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a> and other work.
+<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>,
+IA-64 libffi port, and other work.
 <li>Godmar Back for his improvements and encouragement.
 <li>Scott Bambrough for help porting the compiler.
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
@@ -144,7 +145,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.4 2000/02/12 03:49:42 green Exp $
+$Id: thanks.html,v 1.5 2000/02/23 01:31:30 tromey Exp $
 </small>
 </address>
 
