Add SGI Freeware

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -28,6 +28,8 @@ contact their makers.</p>
 <li>Solaris (SPARC, Intel): <a
     href="http://www.sunfreeware.com/">Sunfreeware</a>
 
+<li>SGI: <a href="http://freeware.sgi.com/">SGI Freeware</a>
+
 <li>Windows 95, 98, and NT: 
     <a href="http://sourceware.cygnus.com/cygwin/">Cygwin for Windows 95,
     98, and NT</a> |
