* thanks.html: Mention Mo DeJong.

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -71,6 +71,7 @@ IA-64 libffi port, and other work.
 <li>Steve Chamberlain for config fixes and the picoJava port.
 <li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
+<li>Mo DeJong for bug fixes
 <li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
 <li>The GCC project <a
 href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
@@ -145,7 +146,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.5 2000/02/23 01:31:30 tromey Exp $
+$Id: thanks.html,v 1.6 2000/02/27 23:22:42 tromey Exp $
 </small>
 </address>
 
