* index.html: Mention g++ change.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,13 @@ i
 
 <table>
 <tr><td valign="top">
+<b>March 2, 2000</b>
+</td><td>
+Tom Tromey changed g++ to allow CNI code to catch and throw exceptions
+Java-style.  This makes it much easier to write CNI code which calls
+Java methods that throw exceptions.
+</td></tr>
+<tr><td valign="top">
 <b>February 25, 2000</b>
 </td><td>
 Anthony Green added an important optimization to gcj.  His
@@ -164,7 +171,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.23 2000/02/18 00:50:11 tromey Exp $
+$Id: index.html,v 1.24 2000/02/27 23:22:42 tromey Exp $
 </small>
 </address>
 
