--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -105,6 +105,14 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 2, 2000</b></dt>
+<dd>
+Jason Molenda, who had a major role in setting up and mangaging the
+gcc.gnu.org (originally egcs.cygnus.com) machine and site, is leaving
+Cygnus. We would like to thank him for his efforts and support behind
+the scenes and wish Jason all the best in his new job.
+</dd>
+
 <dt><b>February 23, 2000</b></dt>
 <dd>
 Cygnus, a Red Hat company, contributed an M*Core port.
@@ -133,24 +141,6 @@ embedded consumer products such as DVD players, HDTV, etc.
 <dt><b>October 27, 1999</b></dt>
 <dd>
 <a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
-</dd>
-
-<dt><b>October 16, 1999</b></dt>
-<dd>
-<p>Craig Burley, our lead Fortran developer and the original author
-of g77, announced that he will stop working on g77 beyond the 2.95
-series.  On behalf of the entire GCC team, the steering committee
-would like to thank Craig for his work.</p>
-
-<p>Craig has written a detailed analysis of the
-<a href="http://world.std.com/~burley/g77-why.html">current state</a>
-and
-<a href="http://world.std.com/~burley/g77-next.html">possible future</a>
-of g77, available at his
-<a href="http://world.std.com/~burley/g77.html">g77 web site</a>.</p>
-
-<p>If you are interested in helping with g77, please <a
-href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 </dd>
 
 </dl>
