--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,24 @@ home page</a>.
 
 <dl>
 
+<dt><b>October 16, 1999</b></dt>
+<dd>
+<p>Craig Burley, our lead Fortran developer and the original author
+of g77, announced that he will stop working on g77 beyond the 2.95
+series.  On behalf of the entire GCC team, the steering committee
+would like to thank Craig for his work.</p>
+
+<p>Craig has written a detailed analysis of the
+<a href="http://world.std.com/~burley/g77-why.html">current state</a>
+and
+<a href="http://world.std.com/~burley/g77-next.html">possible future</a>
+of g77, available at his
+<a href="http://world.std.com/~burley/g77.html">g77 web site</a>.</p>
+
+<p>If you are interested in helping with g77, please <a
+href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
+</dd>
+
 <dt><b>October 12, 1999</b></dt>
 <dd>
 We are pleased to annouce Richard Earnshaw and Jason Merrill have been
