2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
        * faq.html: Update JNI information. Link to gdb.html.
        * FAQ.html: Remove obsolete FAQ, meta-refresh to faq.html.
        * gdb.html: Add <html>,<body>,<title> tags, etc. Mention that
        .gdbinit' can be in $HOME.
        * doc.html: Add link to gdb.html.

--- a/htdocs/java/gdb.html
+++ b/htdocs/java/gdb.html
@@ -1,5 +1,11 @@
+<html>
+<head>
+<title>Java Debugging with gdb</title>
+</head>
+
+<body>
 <p>
-<b>Java Debugging with <tt>gdb</tt></b>
+<h2 align=center>Java Debugging with <tt>gdb</tt></h2>
 
 <p>
 It is possible to debug Java programs compiled with GCJ using GDB.
@@ -23,7 +29,7 @@ handle SIGXCPU nostop noprint<br>
 </tt>
 </blockquote>
 Alternately you can place these two lines in the file <tt>.gdbinit</tt> 
-in the directory where you're running GDB.
+in $HOME or the directory where you're running GDB.
 
 <p>
 Here is an example of debugging a simple test program (which uses multiple
@@ -114,3 +120,6 @@ Current language:  auto; currently c
 (gdb)
 </tt>
 </blockquote>
+
+</body>
+</html>
