--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -1,52 +1,15 @@
 <html>
 <head>
-<title>The GCJ FAQ</title>
+<meta http-equiv="refresh" content="2; URL=http://sourceware.cygnus.com/java/faq.html">
+<title>The GCJ FAQ has moved...</title>
 </head>
-<!--#include virtual="/include/header-subpages.html"-->
-
-    <h2 align=center>The GCJ FAQ</h2>
-
-    <dl>
-      <dt>What license is used for libgcj?</dt>
-      <dd>libgcj is distributed under the Library GPL.</dd>
-
-      <dt>How can I report a bug in libgcj?</dt>
-      <dd>libgcj has a corresponding
-	<a
-      href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Gnats
-	  bug database</a> which you can browse.  You can also submit new
-	bug reports from the Gnats page.</dd>
-
-      <dt>How can I contribute to libgcj?</dt>
-      <dd>You can send simple bug fixes in as patches.  Please follow
-	the <a href="http://egcs.cygnus.com/contribute.html">GCC guidelines
-	for submitting patches</a>.
-	For more complex changes, you must sign copyright over to
-	Cygnus.  The forms for doing this are not yet available, but
-	will be soon.</dd>
-
-      <dt>How can I debug my Java program?</dt>
-      <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb
-	4.18</a> includes support for debugging gcj-compiled Java
-	programs.</dd>
-
-      <dt>Why isn't libgcj part of GCC?</dt>
-      <dd>Copyright problems.  It's possible that libgcj will end up
-	in GCC at some point in the future.</dd>
-
-      <dt>Will gcj and libgcj work on my machine?</dt>
-      <dd>So far gcj and libgcj have only really been tried on Sparc
-	Solaris and x86 Linux.  They might work on other systems, but
-	we don't know.  Generally speaking, porting to a new system
-	should not be hard.  This would be a good way to volunteer.</dd>
-
-      <dt>My program is dumping core!  What's going on?</dt>
-      <dd>I could be any number of things.  One common mistake is 
-        having your <tt>CLASSPATH</tt> environment variable pointing
-	at a third party's java.lang and friends.  Either
-	unset <tt>CLASSPATH</tt>, or make sure it does not refer to 
-        core libraries other than those found in libgcj.zip.</dd>
-
-    </dl>
-
-<!--#include virtual="/include/footer-subpages.html"-->
+<body>
+This page has been moved.
+<p>
+You should be taken to the new location automatically.
+<p>
+If not, click <a href="faq.html">here</a>.
+<p>
+Remember to update your links!
+</body>
+</html>
