2000-03-03  Bryce McKinlay  <bryce@albatross.co.nz>
        * faq.html: Fix some formatting issues.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -184,7 +184,6 @@
         </tr>
       </table>
       <dl> 
-        <dd>&nbsp; </dd>
       </dl>
       <h3><a name="2_1">2.1 What Java API's are supported?</a> How complete is 
         the support?</h3>
@@ -308,7 +307,6 @@
               We'd want to develop a replacement only when we move to the 1.2 
               codebase and then we'll also need to develop AWT 1.2 replacement 
               w/o regard to Swing.</p>
-            <p>&nbsp;</p>
           </blockquote>
         </dl>
         <dl> 
@@ -326,6 +324,7 @@
             to make use of the functionality of an existing toolkit such as Gtk 
             unless we can use Gtk widgets with separate &quot;model&quot; objects.</dd>
         </dl>
+        <dt>&nbsp; </dt>
         <hr>
       </dl>
       <h3><a name="2_6">2.6 </a>What support is there for RMI?</h3>
@@ -410,6 +409,8 @@
         <p></p>
       </dl>
 
+      <hr>
+
       <dl> 
         <dt> 
           <h3><a name="3_2">3.2 Linker bug on Solaris</a></h3>
@@ -445,7 +446,6 @@ collect2: ld returned 1 exit status
         </tr>
       </table>
       <dl> 
-        <dt>&nbsp; </dt>
         <dt> 
           <h3><a name="4_1">4.1 Why do I get <tt>undefined reference to `main'</tt> 
             errors?</a></h3>
@@ -461,7 +461,6 @@ collect2: ld returned 1 exit status
         <hr>
       </dl>
       <dl> 
-        <dt>&nbsp; </dt>
         <dt> 
           <h3><a name="4_2">4.2 Can GCJ only handle source code?</a></h3>
         </dt>
@@ -491,11 +490,9 @@ collect2: ld returned 1 exit status
                 all of which are represented using more low-level constructs in 
                 bytecode.</p>
             </dd>
-            <dt>&nbsp;</dt>
           </dl>
         </dt>
         <hr>
-        <dt>&nbsp;</dt>
         <dt><font color="#FF3300"></font></dt>
         <dt> 
           <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
@@ -508,9 +505,7 @@ collect2: ld returned 1 exit status
         </blockquote>
       </dl>
       <hr>
-      <dl> 
-        <dt>&nbsp; </dt>
-      </dl>
+
       <dl> 
         <dt> 
           <h3><a name="4_4">4.4 Where does GCJ look for files?</a></h3>
@@ -522,9 +517,7 @@ collect2: ld returned 1 exit status
         </blockquote>
       </dl>
       <hr>
-      <dl> 
-        <dt>&nbsp; </dt>
-      </dl>
+
       <dl> 
         <dt> 
           <h3><a name="4_5">4.5 How does gcj resolve whether to compile .class 
@@ -537,9 +530,9 @@ collect2: ld returned 1 exit status
             either it throws an error.</p>
         </blockquote>
       </dl>
-      <dl>
-        <dt>&nbsp; </dt>
-      </dl>
+      
+      <hr>
+      
       <dl>
         <dt>
           <h3><a name="4_6">4.6 I'm getting link errors</a></h3>
@@ -595,7 +588,6 @@ collect2: ld returned 1 exit status
           <p>This shouln't happen anymore, as we dont define MPROTECT_VDB in the 
             GC, at least for Linux/386.</p>
         </dd>
-        <dt>&nbsp;</dt>
       </dl>
       <p></p>
       <dl> 
@@ -632,11 +624,7 @@ collect2: ld returned 1 exit status
       <p></p>
       <p> 
       <dl> 
-        <dd>&nbsp;</dd>
-      </dl>
-      <dl> 
-        <hr>
-        <dt>&nbsp;</dt>
+      <hr>
         <dt> 
           <h3><a name="5_4">5.4 Can I profile Garbage Collection?</a></h3>
         </dt>
@@ -649,7 +637,6 @@ collect2: ld returned 1 exit status
           alone without this flag doesn't seem to work.)</dd>
         <dt>&nbsp;</dt>
         <hr>
-        <dt>&nbsp;</dt>
         <dt> 
           <h3><a name="5_5">5.5 How do I increase the runtime's initial and maximum 
             heap sizes?</a></h3>
@@ -696,7 +683,7 @@ collect2: ld returned 1 exit status
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.13 2000/02/18 18:31:16 tromey Exp $ </small></address>
+<small> $Id: faq.html,v 1.14 2000/03/03 04:56:29 bryce Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
