--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,7 +107,7 @@ maintain and improve quality.
 
 <dt><b>March 2, 2000</b></dt>
 <dd>
-Jason Molenda, who had a major role in setting up and mangaging the
+Jason Molenda, who had a major role in setting up and managing the
 gcc.gnu.org (originally egcs.cygnus.com) machine and site, is leaving
 Cygnus. We would like to thank him for his efforts and support behind
 the scenes and wish Jason all the best in his new job.
