--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -133,10 +133,13 @@ struct X{
 X::Y z;
 </pre>
 
-Since <CODE>Y</CODE> is a private member of <CODE>X</CODE>, the
+<p>Since <CODE>Y</CODE> is a private member of <CODE>X</CODE>, the
 definition of <CODE>z</CODE> should be rejected, but isn't. This
 applies to structs, classes and types in general; for other members of
-classes (functions and data), access control is implemented.
+classes (functions and data), access control is implemented.</p>
+
+<p>In the development branch of gcc, this bug was fixed on Feb 7, 2000.
+The fix will appear in the next major release of gcc (after 2.95).</p>
 
 <h3><a name="export"></a>export not implemented</h3>
 
