Use GCC instead of gcc.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -138,8 +138,8 @@ definition of <CODE>z</CODE> should be rejected, but isn't. This
 applies to structs, classes and types in general; for other members of
 classes (functions and data), access control is implemented.</p>
 
-<p>In the development branch of gcc, this bug was fixed on Feb 7, 2000.
-The fix will appear in the next major release of gcc (after 2.95).</p>
+<p>In the development branch of GCC, this bug was fixed on Feb 7, 2000.
+The fix will appear in the next major release of GCC (after 2.95).</p>
 
 <h3><a name="export"></a>export not implemented</h3>
 
@@ -226,7 +226,7 @@ void foo(){
   B(A(2)).func();    //B temporary, initialized with A temporary
 }
 </pre>
-The problem is that gcc starts to parse the declaration of
+The problem is that GCC starts to parse the declaration of
 <CODE>b</CODE> as a function <CODE>b</CODE> returning <CODE>B</CODE>,
 taking a function returning <CODE>A</CODE> as an argument. When it
 sees the 1, it is too late. The work-around in these cases is to add
