--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -127,10 +127,9 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <tr align=left>
 <!-- FIXME: Best would be to have a newmonthsgohere machinery here, but
      this page is checked into CVS, which adds a level of complexity that
-     is not currently handled well.
-      Note also that the lists from 1997-1998 are not here, except for
-     ...-announce.  -->
+     is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-03">Mar 2000
 <option value="gcc/2000-02">Feb 2000
 <option value="gcc/2000-01">Jan 2000
 <option value="gcc/1999-12">Dec 1999
@@ -163,6 +162,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-03">Mar 2000
 <option value="gcc-bugs/2000-02">Feb 2000
 <option value="gcc-bugs/2000-01">Jan 2000
 <option value="gcc-bugs/1999-12">Dec 1999
@@ -195,6 +195,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-03">Mar 2000
 <option value="gcc-patches/2000-02">Feb 2000
 <option value="gcc-patches/2000-01">Jan 2000
 <option value="gcc-patches/1999-12">Dec 1999
@@ -219,6 +220,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-03">Mar 2000
 <option value="gcc-help/2000-02">Feb 2000
 <option value="gcc-help/2000-01">Jan 2000
 <option value="gcc-help/1999-12">Dec 1999
@@ -228,6 +230,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-03">Mar 2000
 <option value="gcc-cvs/2000-02">Feb 2000
 <option value="gcc-cvs/2000-01">Jan 2000
 <option value="gcc-cvs/1999-12">Dec 1999
@@ -252,6 +255,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-03">Mar 2000
 <option value="gcc-testresults/2000-02">Feb 2000
 <option value="gcc-testresults/2000-01">Jan 2000
 <option value="gcc-testresults/1999-12">Dec 1999
