* papers/cni.sgml: Mention `gcj/cni.h', not just `cni.h'. 	Updated for new exception handling.

--- a/htdocs/java/papers/cni/t1.html
+++ b/htdocs/java/papers/cni/t1.html
@@ -10,6 +10,8 @@ REL="NEXT"
 TITLE="Packages"
 HREF="t134.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="ARTICLE"
 ><H1
@@ -23,86 +25,7 @@ CLASS="CORPAUTHOR"
 ><I
 >Cygnus Solutions</I
 ></P
-><HR><DIV
-CLASS="TOC"
-><DL
-><DT
-><B
->Table of Contents</B
-></DT
-><DT
-><A
-HREF="t1.html#AEN10"
->Basic Concepts</A
-></DT
-><DT
-><A
-HREF="t134.html"
->Packages</A
-></DT
-><DT
-><A
-HREF="t187.html"
->Primitive types</A
-></DT
-><DT
-><A
-HREF="t1178.html"
->Objects and Classes</A
-></DT
-><DT
-><A
-HREF="t1215.html"
->Arrays</A
-></DT
-><DT
-><A
-HREF="t1262.html"
->Methods</A
-></DT
-><DT
-><A
-HREF="t1308.html"
->Object allocation</A
-></DT
-><DT
-><A
-HREF="t1324.html"
->Interfaces</A
-></DT
-><DT
-><A
-HREF="t1331.html"
->Strings</A
-></DT
-><DT
-><A
-HREF="t1405.html"
->Class Initialization</A
-></DT
-><DT
-><A
-HREF="t1421.html"
->Exception Handling</A
-></DT
-><DT
-><A
-HREF="t1442.html"
->Synchronization</A
-></DT
-><DT
-><A
-HREF="t1468.html"
->Reflection</A
-></DT
-><DT
-><A
-HREF="t1478.html"
->Using gcjh</A
-></DT
-></DL
-></DIV
-><BLOCKQUOTE
+><HR><BLOCKQUOTE
 CLASS="ABSTRACT"
 ><P
 >This documents CNI, the Cygnus Native Interface,
@@ -157,36 +80,18 @@ remove gratuitous incompatibilities.</P
 a Java/CNI-aware C++ compiler, specifically a recent version of G++.)</P
 ><P
 >You start with:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
->#include &#60;cni.h&#62;</PRE
-></TD
-></TR
-></TABLE
+>#include &#60;gcj/cni.h&#62;</PRE
 ></P
 ><P
 >You then include header files for the various Java classes you need
 to use:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >#include &#60;java/lang/Character.h&#62;
 #include &#60;java/util/Date.h&#62;
 #include &#60;java/lang/IndexOutOfBoundsException.h&#62;</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 >In general, <SPAN
