--- a/htdocs/java/papers/cni/t1178.html
+++ b/htdocs/java/papers/cni/t1178.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Arrays"
 HREF="t1215.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -158,13 +160,7 @@ CLASS="LITERAL"
 >-generated header for a
 class, you can access fields of Java classes in the &#8220;natural&#8221;
 way.  Given the following Java class:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >public class Int
 {
@@ -172,20 +168,11 @@ CLASS="PROGRAMLISTING"
   public Integer (int i) { this.i = i; }
   public static zero = new Integer(0);
 }</PRE
-></TD
-></TR
-></TABLE
 >
 you can write:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
->#include &#60;cni.h&#62;
+>#include &#60;gcj/cni.h&#62;
 #include &#60;Int.h&#62;
 Int*
 mult (Int *p, jint k)
@@ -194,9 +181,6 @@ mult (Int *p, jint k)
     return Int::zero;  // static member access.
   return new Int(p-&#62;i * k);
 }</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 ><SPAN
