--- a/htdocs/java/papers/cni/t1262.html
+++ b/htdocs/java/papers/cni/t1262.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Object allocation"
 HREF="t1308.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -123,28 +125,13 @@ than the `<TT
 CLASS="LITERAL"
 >.</TT
 >' operator.  For example:</P
-><TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
 ><PRE
 CLASS="PROGRAMLISTING"
 >jint i = java::lang::Math::round((jfloat) 2.3);</PRE
-></TD
-></TR
-></TABLE
 ><P
 >Defining a static native method uses standard C++ method
 definition syntax.  For example:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >#include &#60;java/lang/Integer.h&#62;
 java::lang::Integer*
@@ -152,9 +139,6 @@ java::lang::Integer::getInteger(jstring str)
 {
   ...
 }</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><H2
 ><A
@@ -167,19 +151,10 @@ using the <TT
 CLASS="LITERAL"
 >new</TT
 > operator.  For example:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 > 
 java::lang::Int x = new java::lang::Int(234);</PRE
-></TD
-></TR
-></TABLE
 > </P
 ><P
 >Java does not allow a constructor to be a native method.
@@ -228,29 +203,14 @@ CLASS="ACRONYM"
 >CNI</SPAN
 > is done
 using the standard C++ syntax.  For example:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >  java::lang::Number *x;
   if (x-&#62;doubleValue() &#62; 0.0) ...</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 >Defining a Java native instance method is also done the natural way:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >#include &#60;java/lang/Integer.h&#62;
 jdouble
@@ -258,9 +218,6 @@ java::lang:Integer::doubleValue()
 {
   return (jdouble) value;
 }</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><H2
 ><A
