--- a/htdocs/java/papers/cni/t1324.html
+++ b/htdocs/java/papers/cni/t1324.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Strings"
 HREF="t1331.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
