--- a/htdocs/java/papers/cni/t1331.html
+++ b/htdocs/java/papers/cni/t1331.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Class Initialization"
 HREF="t1405.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -81,17 +83,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->jstring <B
-CLASS="FSFUNC"
->JvNewString</B
-></CODE
->(const jchar *<VAR
-CLASS="PDPARAM"
->chars</VAR
->, jsize <VAR
-CLASS="PDPARAM"
->len</VAR
->);<P
+>jstring JvNewString</CODE
+>(const jchar *chars, jsize len);<P
 ></P
 ></DIV
 >
@@ -115,17 +108,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->jstring <B
-CLASS="FSFUNC"
->JvNewStringLatin1</B
-></CODE
->(const char *<VAR
-CLASS="PDPARAM"
->bytes</VAR
->, jsize <VAR
-CLASS="PDPARAM"
->len</VAR
->);<P
+>jstring JvNewStringLatin1</CODE
+>(const char *bytes, jsize len);<P
 ></P
 ></DIV
 >
@@ -155,14 +139,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->jstring <B
-CLASS="FSFUNC"
->JvNewStringLatin1</B
-></CODE
->(const char *<VAR
-CLASS="PDPARAM"
->bytes</VAR
->);<P
+>jstring JvNewStringLatin1</CODE
+>(const char *bytes);<P
 ></P
 ></DIV
 >
@@ -183,14 +161,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->jstring <B
-CLASS="FSFUNC"
->JvNewStringUTF</B
-></CODE
->(const char *<VAR
-CLASS="PDPARAM"
->bytes</VAR
->);<P
+>jstring JvNewStringUTF</CODE
+>(const char *bytes);<P
 ></P
 ></DIV
 >
@@ -208,14 +180,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->jchar *<B
-CLASS="FSFUNC"
->JvGetStringChars</B
-></CODE
->(jstring <VAR
-CLASS="PDPARAM"
->str</VAR
->);<P
+>jchar *JvGetStringChars</CODE
+>(jstring str);<P
 ></P
 ></DIV
 >
@@ -227,14 +193,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
-> int <B
-CLASS="FSFUNC"
->JvGetStringUTFLength</B
-></CODE
->(jstring <VAR
-CLASS="PDPARAM"
->str</VAR
->);<P
+> int JvGetStringUTFLength</CODE
+>(jstring str);<P
 ></P
 ></DIV
 >
@@ -252,23 +212,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
-> jsize <B
-CLASS="FSFUNC"
->JvGetStringUTFRegion</B
-></CODE
->(jstring <VAR
-CLASS="PDPARAM"
->str</VAR
->, jsize <VAR
-CLASS="PDPARAM"
->start</VAR
->, jsize <VAR
-CLASS="PDPARAM"
->len</VAR
->, char *<VAR
-CLASS="PDPARAM"
->buf</VAR
->);<P
+> jsize JvGetStringUTFRegion</CODE
+>(jstring str, jsize start, jsize len, char *buf);<P
 ></P
 ></DIV
 >
