--- a/htdocs/java/papers/cni/t134.html
+++ b/htdocs/java/papers/cni/t134.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Primitive types"
 HREF="t187.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -101,13 +103,7 @@ CLASS="LITERAL"
 >.</P
 ><P
 >Here is how you could express this:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >// Declare the class(es), possibly in a header file:
 namespace java {
@@ -122,9 +118,6 @@ class java::lang::String : public java::lang::Object
 {
   ...
 };</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 >The <TT
@@ -147,13 +140,7 @@ was changed to uses namespaces.  Releases before then used
 nested classes, which are the C++ equivalent of Java inner classes.
 They provide similar (though less convenient) functionality.
 The old syntax is:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >class java {
   class lang {
@@ -161,9 +148,6 @@ CLASS="PROGRAMLISTING"
     class String;
   };
 };</PRE
-></TD
-></TR
-></TABLE
 >
 The obvious difference is the use of <TT
 CLASS="LITERAL"
@@ -179,19 +163,10 @@ multiple places in the source.  This is more convenient, since it
 corresponds more closely to how Java packages are defined.
 The main difference is in the declarations; the syntax for
 using a nested class is the same as with namespaces:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >class java::lang::String : public java::lang::Object
 { ... }</PRE
-></TD
-></TR
-></TABLE
 >
 Note that the generated code (including name mangling)
 using nested classes is the same as that using namespaces.</P
@@ -225,13 +200,7 @@ CLASS="LITERAL"
 > declaration and directive.</P
 ><P
 >A Java simple-type-import declaration:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >import <TT
 CLASS="REPLACEABLE"
@@ -244,9 +213,6 @@ CLASS="REPLACEABLE"
 >TypeName</I
 ></TT
 >;</PRE
-></TD
-></TR
-></TABLE
 >
 allows using <TT
 CLASS="REPLACEABLE"
@@ -272,13 +238,7 @@ The C++ (more-or-less) equivalent is a <TT
 CLASS="LITERAL"
 >using</TT
 >-declaration:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >using <TT
 CLASS="REPLACEABLE"
@@ -291,19 +251,10 @@ CLASS="REPLACEABLE"
 >TypeName</I
 ></TT
 >;</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 >A Java import-on-demand declaration:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >import <TT
 CLASS="REPLACEABLE"
@@ -311,9 +262,6 @@ CLASS="REPLACEABLE"
 >PackageName</I
 ></TT
 >.*;</PRE
-></TD
-></TR
-></TABLE
 >
 allows using <TT
 CLASS="REPLACEABLE"
@@ -339,13 +287,7 @@ The C++ (more-or-less) equivalent is a <TT
 CLASS="LITERAL"
 >using</TT
 >-directive:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >using namespace <TT
 CLASS="REPLACEABLE"
@@ -353,9 +295,6 @@ CLASS="REPLACEABLE"
 >PackageName</I
 ></TT
 >;</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><DIV
 CLASS="NAVFOOTER"
