--- a/htdocs/java/papers/cni/t1405.html
+++ b/htdocs/java/papers/cni/t1405.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Exception Handling"
 HREF="t1421.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
