--- a/htdocs/java/papers/cni/t187.html
+++ b/htdocs/java/papers/cni/t187.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Objects and Classes"
 HREF="t1178.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -96,7 +98,7 @@ CLASS="LITERAL"
 >s
 (which are defined by <TT
 CLASS="LITERAL"
->cni.h</TT
+>gcj/cni.h</TT
 >):
 <TT
 CLASS="LITERAL"
@@ -321,14 +323,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
-><B
-CLASS="FSFUNC"
->JvPrimClass</B
-></CODE
->(<VAR
-CLASS="PDPARAM"
->primtype</VAR
->);<P
+>JvPrimClass</CODE
+>(primtype);<P
 ></P
 ></DIV
 >
