--- a/htdocs/java/papers/cni/t1308.html
+++ b/htdocs/java/papers/cni/t1308.html
@@ -16,6 +16,8 @@ REL="NEXT"
 TITLE="Interfaces"
 HREF="t1324.html"></HEAD
 ><BODY
+BGCOLOR="#FFFFFF"
+TEXT="#000000"
 ><DIV
 CLASS="NAVHEADER"
 ><TABLE
@@ -67,13 +69,7 @@ NAME="AEN308"
 CLASS="FIRSTTERM"
 >class-instance-creation-expression</I
 >:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >new <TT
 CLASS="REPLACEABLE"
@@ -86,9 +82,6 @@ CLASS="REPLACEABLE"
 >arguments</I
 ></TT
 > )</PRE
-></TD
-></TR
-></TABLE
 >
 The same syntax is used in C++.  The main difference is that
 C++ objects have to be explicitly deleted; in Java they are
@@ -102,18 +95,9 @@ realize the class is a Java class, and hence it needs to allocate
 memory from the garbage collector.  If you have overloaded
 constructors, the compiler will choose the correct one
 using standard C++ overload resolution rules.  For example:
-<TABLE
-BORDER="0"
-BGCOLOR="#E0E0E0"
-WIDTH="100%"
-><TR
-><TD
-><PRE
+<PRE
 CLASS="PROGRAMLISTING"
 >java::util::Hashtable *ht = new java::util::Hashtable(120);</PRE
-></TD
-></TR
-></TABLE
 ></P
 ><P
 ><DIV
@@ -122,14 +106,8 @@ CLASS="FUNCSYNOPSIS"
 ></P
 ><CODE
 CLASS="FUNCDEF"
->void *<B
-CLASS="FSFUNC"
->_Jv_AllocBytes</B
-></CODE
->(jsize <VAR
-CLASS="PDPARAM"
->size</VAR
->);<P
+>void *_Jv_AllocBytes</CODE
+>(jsize size);<P
 ></P
 ></DIV
 >
