* papers/cni.sgml: Removed extra word.

--- a/htdocs/java/papers/cni/t1421.html
+++ b/htdocs/java/papers/cni/t1421.html
@@ -64,7 +64,7 @@ NAME="AEN421"
 >Exception Handling</A
 ></H1
 ><P
->While C++ and Java share a common exception handling framework, though
+>While C++ and Java share a common exception handling framework,
 things are not yet perfectly integrated.  The main issue is that the
 &#8220;run-time type information&#8221; facilities of the two
 languages are not integrated.</P
