* faq.html (3_3 Can I configure/build in the source tree?): Cleaned 	up typos and used clearer wording.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -450,15 +450,15 @@ collect2: ld returned 1 exit status
         <dd>No.  You cannot configure/build in the source tree.  If you try,
 	you'll see something like:
 	<pre>
-$ ./configure
+$ ./configure [...]
 Configuring for a i686-pc-linux-gnu host.
 *** Cannot currently configure in source tree.
 	</pre>
-	Instead, must do something like:
+	Instead, you must build in another directory.  E.g.:
 	<pre>
-mkdir build
-cd build
-../configure --enable-threads=posix --enable-java-gc=boehm [...]
+$ mkdir build
+$ cd build
+$ ../configure [...]
 	</pre>
         </dd>
         <p></p>
@@ -709,7 +709,7 @@ cd build
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.15 2000/03/03 05:12:26 bryce Exp $ </small></address>
+<small> $Id: faq.html,v 1.16 2000/03/09 11:54:27 warrenl Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
