--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -37,6 +37,10 @@
   particular patches.  All patch submissions and all discussion for a
   particular patch should be sent to <b>gcc-patches</b>.
 
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-prs/">gcc-prs</a></b>
+  is a read-only, relatively high volume list which tracks problem reports
+  as they are entered into our GNATS database.
+
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
   gcc CVS repository.
@@ -67,17 +71,10 @@ and try to avoid cross posting a message to several lists.
 
 <h2>Archives</h2>
 
-<p>Web archives for all mailing lists are on-line
-(<a href="http://gcc.gnu.org/ml/gcc-announce/">gcc-announce</a>,
-<a href="http://gcc.gnu.org/ml/gcc/">gcc</a>,
-<a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a>,
-<a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a>,
-<a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a>,
-<a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a>,
-<a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>, and
-<a href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults</a>),
-plus you can also <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">
-download mbox formatted archives of each mailing list</a>.
+<p>In addition to the web archives that are linked from the descriptions
+above, we also provide
+<a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">mbox formatted
+archives of each mailing list</a>.
 
 <p>The web archives are <a href="#searchbox">searchable</a> for
 messages from the beginning of 1999 and on.
@@ -102,6 +99,7 @@ lists via this form:
    <option value="gcc-help">gcc-help
    <option value="gcc-bugs">gcc-bugs
    <option value="gcc-patches">gcc-patches
+   <option value="gcc-prs">gcc-prs
    <option value="gcc-cvs">gcc-cvs
    <option value="gcc-cvs-wwwdocs">gcc-cvs-wwwdocs
    <option value="gcc-testresults">gcc-testresults
