* index.html: Mention java.security.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,19 @@ i
 
 <table>
 <tr><td valign="top">
+<b>March 9, 2000</b>
+</td><td>
+Warren Levy checked in the basics of the java.security.* packages that
+he and Tom Tromey have been putting together.  It is just the basics of
+java.security and some of it is indeed stubbed.  It has been tried with 
+the 20000120 snapshot of 
+<a href="http://www.cryptix.org/products/jce">Cryptix JCE</a>
+so it is usable.
+
+Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
+things included.
+</td></tr>
+<tr><td valign="top">
 <b>March 7, 2000</b>
 </td><td>
 Bryce McKinlay checked in a change to both the runtime and the
@@ -187,7 +200,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.26 2000/03/07 00:14:13 tromey Exp $
+$Id: index.html,v 1.27 2000/03/07 17:30:32 tromey Exp $
 </small>
 </address>
 
