--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -505,8 +505,14 @@ broken <i>VPATH</i> mechanism, which means you must either:
 <hr>
 <h3><a name="sparc-sun-solaris*">sparc-sun-solaris*</a></h3>
 
-<p>binutils 2.9.1 has known bugs on this platform. We recommend to use the
-vendor tools (Sun as, Sun ld) until these have been fixed.</p>
+<p>binutils 2.9.1 has known bugs on this platform. We recommend to use
+the vendor tools (Sun as, Sun ld) until these have been fixed.
+Unfortunately, C++ shared libraries, including libstdc++, won't work
+properly if assembled with Sun as: the linker will complain about
+relocations in read-only sections, in the definition of virtual
+tables.  Some possible work-arounds: use some development release of
+binutils, wait for the next stable binutils release or refrain from
+creating C++ shared libraries.</p>
 
 
 <hr>
