Fix broken markup.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -8,7 +8,7 @@
 
 <h1 align="center">GCC Frequently Asked Questions</h1>
 
-<p>This <a href="http://gcc.gnu.org/cgi-bin/fom">FAQ has moved.</p>
+<p>This <a href="http://gcc.gnu.org/cgi-bin/fom">FAQ has moved</a>.</p>
 
 <p>This FAQ tries to answer specific questions concerning GCC. For
 general information regarding C, C++, resp. Fortran please check the 
