* gdb.html: Mention page author.

--- a/htdocs/java/gdb.html
+++ b/htdocs/java/gdb.html
@@ -121,5 +121,11 @@ Current language:  auto; currently c
 </tt>
 </blockquote>
 
+<hr>
+<address>
+Page written by
+<a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a>
+</address>
+
 </body>
 </html>
