* Many files: Updated gcc URL.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -82,8 +82,8 @@ Solaris you'll need them. If you omit '--prefix' the compiled source will
 be installed under /usr/local. For more information about installing 
 egcs and/or configuration options see:
 
-<a href="http://egcs.cygnus.com/install/index.html">
-http://egcs.cygnus.com/install/index.html</a>
+<a href="http://gcc.gnu.org/install/index.html">
+http://gcc.gnu.org/install/index.html</a>
 </pre>
 </td>
 </tr>
