--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -32,7 +32,7 @@
 <br><a href="http://sourceware.cygnus.com/java/thanks.html">Thanks</a>
 <br><!-- <a href="support.html">Support</a><br> -->
 <br>&nbsp;
-<p><a href="http://egcs.cygnus.com">GCC</a>
+<p><a href="http://gcc.gnu.org">GCC</a>
 <br><a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a>
 <br><a href="http://sourceware.cygnus.com">Sourceware</a>
 <br><a href="http://www.gnu.org">The GNU Project</a>
@@ -221,7 +221,7 @@ do Gnats.
 <dl>
 <dt>
 Voc&ecirc; pode enviar reparos simples como remendos. Por favor, siga as
-seguintes <a href="http://egcs.cygnus.com/contribute.html">Diretrizes GCC
+seguintes <a href="http://gcc.gnu.org/contribute.html">Diretrizes GCC
 para submiss&atilde;o de remendos</a>. "For more complex changes, you must
 sign copyright over to Cygnus." Veja a&nbsp; p&aacute;gina de <a href="http://sourceware.cygnus.com/java/contrib.html">contribui&ccedil;&otilde;es</a>
 para detalhes.
@@ -628,7 +628,7 @@ Por favor, leia <a href="http://sourceware.cygnus.com/java/build-snapshot.html">
 <a NAME="3_2"></a>3.2 Bug de v&iacute;nculo no Solaris</h3>
 
 <dd>
-H&aacute; um problema conhecido com o&nbsp;<a href="http://egcs.cygnus.com/ml/gcc-bugs/1999-10/msg00159.html">
+H&aacute; um problema conhecido com o&nbsp;<a href="http://gcc.gnu.org/ml/gcc-bugs/1999-10/msg00159.html">
 <i>linkador</i> nativo do Solaris</a> ao usar gcc/gcj. Uma boa indica&ccedil;&atilde;o
 de que voc&ecirc; se deparou com este problema &eacute; ter recebido um
 erro que parece com o seguinte durante a constru&ccedil;&atilde;o do libgcj:&nbsp;</dd>
