--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -23,7 +23,7 @@
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
-<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://gcc.gnu.org">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -200,7 +200,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.27 2000/03/07 17:30:32 tromey Exp $
+$Id: index.html,v 1.28 2000/03/10 02:52:54 warrenl Exp $
 </small>
 </address>
 
