--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -23,7 +23,7 @@
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
-<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://gcc.gnu.org">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -143,7 +143,7 @@ see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.2 2000/01/28 03:47:13 jsm Exp $
+$Id: mail.html,v 1.3 2000/01/28 03:47:40 jsm Exp $
 </small>
 </address>
 
