--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -23,7 +23,7 @@
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
-<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://gcc.gnu.org">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -164,7 +164,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.2 1999/09/07 00:59:02 green Exp $
+$Id: docs.html,v 1.3 2000/03/03 04:56:29 bryce Exp $
 </small>
 </address>
 
