--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -23,7 +23,7 @@
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
-<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://gcc.gnu.org">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -119,7 +119,7 @@ archive</a> (the entire compiler is also
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.3 2000/02/11 23:19:37 apbianco Exp $
+$Id: download.html,v 1.4 2000/02/11 23:21:57 apbianco Exp $
 </small>
 </address>
 
