--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -27,7 +27,7 @@
                   <!-- <a href="support.html">Support</a><br> --> <br>
                   <br>
                   <br>
-                  <a href="http://egcs.cygnus.com">GCC</a><br>
+                  <a href="http://gcc.gnu.org">GCC</a><br>
                   <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
                   <a href="http://sourceware.cygnus.com">Sourceware</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -138,7 +138,7 @@
           <h3><a name="1_3">1.3 How can I contribute to libgcj?</a></h3>
         </dt>
         <p> 
-        <dd>You can send simple bug fixes in as patches. Please follow the <a href="http://egcs.cygnus.com/contribute.html">GCC 
+        <dd>You can send simple bug fixes in as patches. Please follow the <a href="http://gcc.gnu.org/contribute.html">GCC 
           guidelines for submitting patches</a>. For more complex changes, you 
           must sign copyright over to Cygnus. See the <a href="contrib.html">contribution</a> 
           page for details.</dd>
@@ -417,7 +417,7 @@
           <h3><a name="3_2">3.2 Linker bug on Solaris</a></h3>
         </dt>
         <p> 
-        <dd>There is a known problem with the <a href="http://egcs.cygnus.com/ml/gcc-bugs/1999-10/msg00159.html"> 
+        <dd>There is a known problem with the <a href="http://gcc.gnu.org/ml/gcc-bugs/1999-10/msg00159.html"> 
           native Solaris linker</a> when using gcc/gcj. A good indication you've 
           run into this problem is if you get an error that looks like the following 
           when building libgcj: 
@@ -709,7 +709,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.16 2000/03/09 11:54:27 warrenl Exp $ </small></address>
+<small> $Id: faq.html,v 1.17 2000/03/09 20:10:41 warrenl Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
