--- a/htdocs/java/gcj2.html
+++ b/htdocs/java/gcj2.html
@@ -12,7 +12,7 @@
 compile both Java<sup><a href="#javatm">tm</a></sup> source and
 bytecode files.  The compiler can also generate class files.  This new
 front end is integrated into the <a
-href="http://egcs.cygnus.com/">GCC</a> project.
+href="http://gcc.gnu.org/">GCC</a> project.
 
 
 <h2>What you get</h2>
@@ -74,7 +74,7 @@ href="http://egcs.cygnus.com/">GCC</a> project.
 
 <p>The new Java front end is very easy to download and install.  Since
 it is it fully integrated into GCC, you can simply follow the <a
-href="http://egcs.cygnus.com/cvs.html">GCC download and build
+href="http://gcc.gnu.org/cvs.html">GCC download and build
 instructions</a>.  Note that you'll want to configure GCC to use the
 appropriate threads system; see <a
 href="libgcj2.html">the libgcj page</a> for details.
