--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -51,12 +51,12 @@ tree and run <tt>'make check'</tt> after doing the following:
   via both anonymous cvs and snapshots.
   <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
   <li>The testsuites rely on the dejagnu package.  You can download the
-  <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-19990614.tar.gz">current dejagnu snapshot</a>
+  <a href="ftp://gcc.gnu.org/pub/egcs/infrastructure/dejagnu-19990614.tar.gz">current dejagnu snapshot</a>
   from egcs.  Please note that some earlier versions of dejagnu are missing a
   patch that's in recent snapshots.  Please make sure you have tried
   running the testsuites with the current snapshot of dejagnu before reporting
   any testsuite platform problems.  There is a short entry in the
-  <a href="http://egcs.cygnus.com/faq.html#dejagnu">egcs FAQ</a>
+  <a href="http://gcc.gnu.org/faq.html#dejagnu">egcs FAQ</a>
   if you would like more information about this issue.
 </ul>
 
@@ -72,7 +72,7 @@ tree and run <tt>'make check'</tt> after doing the following:
   <li>An egcs patch affecting <tt>gcj</tt> was made on 24-June-99.
   Developers using cvs to access the egcs source should update an rebuild
   to get that fix.  The next
-  <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">egcs snapshot</a>
+  <a href="ftp://gcc.gnu.org/pub/egcs/snapshots/index.html">egcs snapshot</a>
   with this patch will not be available until 30-June-99.  At that point
   developers without cvs access should download that patch.  In the
   meantime, the problem can be avoided in test runs with the following
