--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -23,7 +23,7 @@
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
-<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://gcc.gnu.org">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
@@ -55,7 +55,7 @@ Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: tm.html,v 1.4 1999/09/06 19:37:27 green Exp $
+$Id: tm.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
