* index.html: Mention JDK 1.1 compiler changes.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,12 @@ i
 
 <table>
 <tr><td valign="top">
+<b>March 13, 2000</b>
+</td><td>
+Alexandre Petit-Bianco has checked in a change to the compiler to add 
+support for most JDK 1.1 language features, such as inner classes.
+</td></tr>
+<tr><td valign="top">
 <b>March 9, 2000</b>
 </td><td>
 Warren Levy checked in the basics of the java.security.* packages that
@@ -200,7 +206,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.28 2000/03/10 02:52:54 warrenl Exp $
+$Id: index.html,v 1.29 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
