--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -48,6 +48,15 @@ installation on non-Sun systems or when using GNU make.</p>
 
 <p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
 
+<h2><a name="libgxx"><a href="http://www.m-hollstein.de/libgxx/">Libg++</a></h2>
+
+<p><code>Libg++</code>, the GNU C++ library, is an attempt to
+provide a variety of C++ programming tools and other support to
+GNU C++ programmers.  It has been available for quite some time
+now, and, although it has been superceeded by <code>libstdc++</code>,
+it is still providing some useful services. And, it has proven to
+be a good testsuite for the compiler...
+
 <hr>
 
 <h1>GCC Museum</h1>
