--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -154,6 +154,9 @@ Un-successful.  Needs tweaks to gcc/mips/linux.h
 <p><b>powerpc-ibm-aix4.1.3.0</b><br>
 Successful
 
+<p><b>powerpc-ibm-aix4.1.5.0</b><br>
+Successful
+
 <p><b>powerpc-ibm-aix4.2.1.0</b><br>
 Successful
 
